--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="keywords" content="js代码网">
 <meta name="description" content="js代码网">
-<title>非常不错的带JS表单验证的网站登录页面模板 - js代码网</title>
+<title>先天下--大千影视</title>
 <meta name="keywords" content="网站模板,登录页面模板,登陆页面模板,登录界面模板,登录页面表单验证">
 <meta name="description" content="JS代码网提供大量的登录页面模板的学习和下载">
 <link rel="shortcut icon" href="resources/images/favicon.ico" />
@@ -30,7 +30,7 @@
 <div class="dataEye">
 	<div class="loginbox">
 		<div class="logo-a">
-			<a href="http://www.js-css.cn" title="js代码网">
+			<a href="http://www.dq-video.cn" title="大千影视网">
 				<img src="resources/images/logo-a.png">
 			</a>
 		</div>
@@ -67,7 +67,7 @@
 		<div class="inline-block"><img src="resources/images/logo-gray.png"></div>
 		<div class="inline-block copyright">
 			<p><a href="#">关于我们</a> | <a href="#">微博</a> | <a href="#">隐私政策</a> | <a href="#">人员招聘</a></p>
-			<p> Copyright © 2013 JS代码网</p>
+			<p> Copyright © 2013 大千网</p>
 		</div>
 	</div>
 </div>
